--- a/cyckle.html
+++ b/cyckle.html
@@ -21,7 +21,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <h1>Cyckle AI</h1>
-            <p>The three principles and requirements of our software.</p>
+            <p>Secure AI for everyone.</p>
             <a href="https://github.com/vaultdweller-2287/Cyckle-ai" class="glow-button">Check it out!</a>
         </div>
     </section>
