--- a/cyckle.html
+++ b/cyckle.html
@@ -38,7 +38,7 @@
             <p>Due to it's local nature, Cyckle will not share your data with servers! You can freely chat with Cyckle without worry!</p>
         </div>
         <div class="card">
-            <span class="card-icon">❓</span>
+            <span class="card-icon">✨</span>
             <h2>Intuitive</h2>
             <p>Simplicity was at the core of Cyckle's design from the beginning. It only takes 3 visual elements to create a basic chatbot interface, with a versatile command line entry box.</p>
         </div>
