--- a/cyckle.html
+++ b/cyckle.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SourceWorks - CyckleAI</title>
+    <link rel="icon" type="image/jpg" href="assets/srcworks.jpg">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
         <a href="index.html" class="logo-link">
-            <div class="logo">SourceWorks</div>
+            <div class="logo">&lt;src&gt;works</div>
         </a>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
