--- a/cyckle.html
+++ b/cyckle.html
@@ -15,7 +15,7 @@
         </a>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
-            <li><a href="#work">Projects</a></li>
+            <li><a href="#work">Features</a></li>
         </ul>
     </nav>
 
@@ -23,15 +23,16 @@
         <div class="hero-content">
             <h1>Cyckle AI</h1>
             <p>Secure AI for everyone.</p>
-            <a href="https://github.com/vaultdweller-2287/Cyckle-ai" class="glow-button">Check it out!</a>
+            <a href="https://github.com/srcworks-software/Cyckle-ai" class="glow-button">Check it out!</a>
         </div>
     </section>
 
     <section class="services" id="work">
+        <h2>Features</h2>
         <div class="card">
             <span class="card-icon">⚡</span>
             <h2>Speedy</h2>
-            <p>Cyckle uses Phi3-mini, which is a 3.8B model comparable to many 7B models. Cyckle also adjusts settings to optimize and take advantage of your system.</p>
+            <p>Cyckle uses Phi3.5-mini, which is a 3.8B model comparable to many 7B models. Cyckle also adjusts settings to optimize and take advantage of your system.</p>
         </div>
         <div class="card">
             <span class="card-icon">🔒</span>
@@ -40,8 +41,8 @@
         </div>
         <div class="card">
             <span class="card-icon">✨</span>
-            <h2>Intuitive</h2>
-            <p>Simplicity was at the core of Cyckle's design from the beginning. It only takes 3 visual elements to create a basic chatbot interface, with a versatile command line entry box.</p>
+            <h2>Versatile</h2>
+            <p>Chatting isn't one of the only features of Cyckle. It can also analyze CSV files, and more!</p>
         </div>
     </section>
 </body>
