--- a/chi.html
+++ b/chi.html
@@ -21,27 +21,27 @@
 
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1>Cyckle AI</h1>
+            <h1>Chi</h1>
             <p>Secure AI for everyone.</p>
-            <a href="https://github.com/srcworks-software/Cyckle-ai" class="glow-button">Check it out!</a>
+            <a href="https://github.com/srcworks-software/Chi" class="glow-button">Check it out!</a>
         </div>
     </section>
 
     <section class="services" id="work">
         <div class="card">
-            <span class="card-icon">⚡</span>
-            <h2>Speedy</h2>
-            <p>Cyckle uses Phi3.5-mini, which is a 3.8B model comparable to many 7B models. Cyckle also adjusts settings to optimize and take advantage of your system.</p>
+            <span class="card-icon">💡</span>
+            <h2>Intuitive</h2>
+            <p></p>
         </div>
         <div class="card">
             <span class="card-icon">🔒</span>
             <h2>Secure</h2>
-            <p>Due to it's local nature, Cyckle will not share your data with servers! You can freely chat with Cyckle without worry!</p>
+            <p>Due to it's local nature, Chi will not share your data with servers! You can chat with Chi worry-free!</p>
         </div>
         <div class="card">
             <span class="card-icon">✨</span>
-            <h2>Versatile</h2>
-            <p>Chatting isn't one of the only features of Cyckle. It can also analyze CSV files, and more!</p>
+            <h2>Customizable</h2>
+            <p>Use whatever model you desire! Just click "choose model" and you're on your way!</p>
         </div>
     </section>
 </body>
