--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     </section>
 
     <section class="services" id="work">
-        <a href="cyckle.html" class="card-link">
+        <a href="chi.html" class="card-link">
             <div class="card">
                 <span class="card-icon">🤖</span>
                 <h2>Cyckle AI</h2>
-                <p>A local Phi3-mini chatbot written in Cython.</p>
+                <p>A local GTK4 chatbot written in Python.</p>
             </div>
         </a>
         <div class="card">
