--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="chi.html" class="card-link">
             <div class="card">
                 <span class="card-icon">🤖</span>
-                <h2>Cyckle AI</h2>
+                <h2>Chi</h2>
                 <p>A local GTK4 chatbot written in Python.</p>
             </div>
         </a>
