--- a/chi.html
+++ b/chi.html
@@ -31,7 +31,7 @@
         <div class="card">
             <span class="card-icon">💡</span>
             <h2>Intuitive</h2>
-            <p></p>
+            <p>Chi uses a sleek GTK4 UI that provides an easy layout and the ability to adapt with system themes!</p>
         </div>
         <div class="card">
             <span class="card-icon">🔒</span>
